# espidf5_edgetx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf_edgetx.h  sdkconfig  system_diagram.puml
main/: CMakeLists.txt  espidf5_edgetx_main.cpp
